changes for upload service with build failing