@@ -1,10 +1,7 @@
 package com.nextuple.postal.code.timezone.service;
 
-import static com.nextuple.postal.code.timezone.TestUtil.ID;
-import static com.nextuple.postal.code.timezone.TestUtil.ORG_ID;
-import static com.nextuple.postal.code.timezone.TestUtil.REGION_ID;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static com.nextuple.postal.code.timezone.TestUtil.*;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doNothing;
@@ -14,14 +11,18 @@ import static org.mockito.internal.verification.VerificationModeFactory.times;
 
 import com.nextuple.common.exception.CommonServiceException;
 import com.nextuple.common.exception.PromiseEngineException;
+import com.nextuple.common.pojo.PageParams;
 import com.nextuple.postal.code.timezone.TestUtil;
 import com.nextuple.postal.code.timezone.api.domain.dto.CustomRegionDto;
+import com.nextuple.postal.code.timezone.api.domain.dto.CustomRegionInfo;
 import com.nextuple.postal.code.timezone.api.domain.inbound.CustomRegionRequest;
+import com.nextuple.postal.code.timezone.api.domain.inbound.DeleteCustomRegionGeozonesRequest;
 import com.nextuple.postal.code.timezone.api.domain.outbound.CustomRegionResponse;
 import com.nextuple.postal.code.timezone.persistence.domain.CustomRegionDomainDto;
 import com.nextuple.postal.code.timezone.persistence.domain.PostalCodeDomainDto;
 import com.nextuple.postal.code.timezone.persistence.service.CustomRegionPersistenceService;
 import com.nextuple.postal.code.timezone.persistence.service.PostalCodePersistenceService;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -33,7 +34,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
-import org.springframework.data.domain.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 
 class CustomRegionServiceTest {
   @Mock private CustomRegionPersistenceService customRegionPersistenceService;
@@ -51,7 +56,7 @@ class CustomRegionServiceTest {
   void createCustomRegionTest() throws PromiseEngineException, CommonServiceException {
     CustomRegionDomainDto customRegion = testUtil.getCustomRegionEntity();
     CustomRegionRequest createCustomRegionRequest = testUtil.getCreateCustomRegionRequest();
-    createCustomRegionRequest.setCodes(Arrays.asList("X2H"));
+    createCustomRegionRequest.setCodes(List.of("X2H"));
     when(customRegionPersistenceService.saveCustomRegion(any(CustomRegionDomainDto.class)))
         .thenReturn(customRegion);
     when(postalCodePersistenceService.fetchPostalCodeList(anyString(), anyString()))
@@ -64,7 +69,26 @@ class CustomRegionServiceTest {
   }
 
   @Test
-  @DisplayName("FAILURE PATH:Test the create custom region request with PARTIAL codes")
+  @DisplayName("HAPPY PATH:Test the upsert existing custom region")
+  void createCustomRegionTestUpsert() throws PromiseEngineException, CommonServiceException {
+    CustomRegionDomainDto customRegion = testUtil.getCustomRegionEntity();
+    CustomRegionRequest createCustomRegionRequest = testUtil.getCreateCustomRegionRequest();
+    createCustomRegionRequest.setCodes(List.of("X2H"));
+    when(customRegionPersistenceService.fetchRegionByOrgIdAndId(any(), any()))
+        .thenReturn(Optional.ofNullable(customRegion));
+    when(customRegionPersistenceService.saveCustomRegion(any(CustomRegionDomainDto.class)))
+        .thenReturn(customRegion);
+    when(postalCodePersistenceService.fetchPostalCodeList(anyString(), anyString()))
+        .thenReturn(List.of(testUtil.getPostalCodeEntity()));
+    CustomRegionResponse customRegionResponse =
+        customRegionService.createCustomRegion(createCustomRegionRequest);
+    assertEquals(customRegion.getOrgId(), customRegionResponse.getOrgId());
+    verify(customRegionPersistenceService, times(1))
+        .saveCustomRegion(any(CustomRegionDomainDto.class));
+  }
+
+  @Test
+  @DisplayName("FAILURE PATH:Test the create custom region request with INVALID codes")
   void createPostalCodeTest3() throws PromiseEngineException {
     CustomRegionDomainDto customRegion = testUtil.getCustomRegionEntity();
     CustomRegionRequest createCustomRegionRequest = testUtil.getCreateCustomRegionFullRequest();
@@ -77,7 +101,7 @@ class CustomRegionServiceTest {
         () -> {
           customRegionService.createCustomRegion(createCustomRegionRequest);
         });
-    verify(customRegionPersistenceService, times(1))
+    verify(customRegionPersistenceService, times(0))
         .fetchRegionByOrgIdAndId(anyString(), anyString());
   }
 
@@ -96,7 +120,7 @@ class CustomRegionServiceTest {
         () -> {
           customRegionService.createCustomRegion(createCustomRegionRequest);
         });
-    verify(customRegionPersistenceService, times(1))
+    verify(customRegionPersistenceService, times(0))
         .fetchRegionByOrgIdAndId(anyString(), anyString());
   }
 
@@ -126,7 +150,7 @@ class CustomRegionServiceTest {
   @Test
   @DisplayName("Test the scenario when custom region already exists for given postal code")
   void createPostalCodeTestWhenCustomRegionAlreadyExistsForGivenPostalCode()
-      throws PromiseEngineException, CommonServiceException {
+      throws PromiseEngineException {
     CustomRegionDomainDto customRegion = testUtil.getCustomRegionEntity();
     CustomRegionRequest createCustomRegionRequest = testUtil.getCreateCustomRegionFullRequest();
     createCustomRegionRequest.setCodes(Arrays.asList("X2H"));
@@ -178,7 +202,7 @@ class CustomRegionServiceTest {
   }
 
   @Test
-  void createPostalCodeExceptionTest() throws PromiseEngineException {
+  void createPostalCodeExceptionTest() {
     CustomRegionRequest createCustomRegionRequest = testUtil.getCreateCustomRegionRequest();
     when(customRegionPersistenceService.fetchRegionByOrgIdAndId(anyString(), anyString()))
         .thenReturn(Optional.ofNullable(testUtil.getCustomRegionEntity()));
@@ -188,12 +212,12 @@ class CustomRegionServiceTest {
         () -> {
           customRegionService.createCustomRegion(createCustomRegionRequest);
         });
-    verify(customRegionPersistenceService, times(1))
+    verify(customRegionPersistenceService, times(0))
         .fetchRegionByOrgIdAndId(anyString(), anyString());
   }
 
   @Test
-  void createPostalCodeExceptionTest2() throws PromiseEngineException {
+  void createPostalCodeExceptionTest2() {
     CustomRegionRequest createCustomRegionRequest =
         testUtil.getCreateCustomRegionEmptyCodesRequest();
     when(customRegionPersistenceService.fetchRegionByOrgIdAndId(anyString(), anyString()))
@@ -206,31 +230,12 @@ class CustomRegionServiceTest {
               customRegionService.createCustomRegion(createCustomRegionRequest);
             });
     assertEquals("Zip Codes cannot be blank", ex.getMessage());
-    verify(customRegionPersistenceService, times(1))
+    verify(customRegionPersistenceService, times(0))
         .fetchRegionByOrgIdAndId(anyString(), anyString());
   }
 
   @Test
-  void createCustomRegionTestExceptionTest() {
-    CustomRegionRequest createCustomRegionRequest = testUtil.getCreateCustomRegionRequest();
-    when(customRegionPersistenceService.fetchRegionByOrgIdAndCustomRegionName(
-            anyString(), anyString()))
-        .thenReturn(Optional.ofNullable(testUtil.getCustomRegionEntity()));
-
-    Exception ex =
-        assertThrows(
-            CommonServiceException.class,
-            () -> {
-              customRegionService.createCustomRegion(createCustomRegionRequest);
-            });
-
-    assertEquals("Custom Region Name already exists", ex.getMessage());
-    verify(customRegionPersistenceService, times(1))
-        .fetchRegionByOrgIdAndId(anyString(), anyString());
-  }
-
-  @Test
-  void getPostalCodeTest() throws PromiseEngineException, CommonServiceException {
+  void getPostalCodeTest() throws CommonServiceException {
     CustomRegionDomainDto customRegion = testUtil.getCustomRegionEntity();
     when(customRegionPersistenceService.fetchRegionByOrgIdAndId(anyString(), anyString()))
         .thenReturn(Optional.ofNullable(customRegion));
@@ -243,7 +248,7 @@ class CustomRegionServiceTest {
   }
 
   @Test
-  void getPostalCodeNotFoundTest() throws PromiseEngineException {
+  void getPostalCodeNotFoundTest() {
     when(customRegionPersistenceService.fetchRegionByOrgIdAndId(anyString(), anyString()))
         .thenReturn(Optional.empty());
 
@@ -327,47 +332,29 @@ class CustomRegionServiceTest {
   }
 
   @Test
-  @DisplayName(
-      "FAILURE PATH:Test the update custom region request with PARTIAL codes and postal code DB with exception")
+  @DisplayName("Happy Path : Updating existing list of zip_code_prefixes for valid custom region")
   void updatePostalCodeTest8() throws PromiseEngineException, CommonServiceException {
     CustomRegionDomainDto customRegion = testUtil.getCustomRegionEntity();
-    CustomRegionRequest createCustomRegionRequest = testUtil.getCreateCustomRegionRequest2();
+    CustomRegionDomainDto updatedCustomRegion = testUtil.getCustomRegionEntity();
+    CustomRegionResponse expectedResponse = testUtil.getCustomRegionResponseCrId2();
+    updatedCustomRegion.setCodes(expectedResponse.getCodes());
+    CustomRegionRequest createCustomRegionRequest = testUtil.getCreateCustomRegionRequest();
+    createCustomRegionRequest.setCodes(List.of("X2H"));
     when(customRegionPersistenceService.fetchRegionByOrgIdAndId(anyString(), anyString()))
         .thenReturn(Optional.of(customRegion));
     when(customRegionPersistenceService.saveCustomRegion(any(CustomRegionDomainDto.class)))
-        .thenReturn(customRegion);
+        .thenReturn(updatedCustomRegion);
     when(postalCodePersistenceService.fetchPostalCodeList(anyString(), anyString()))
-        .thenThrow(PromiseEngineException.class);
-    assertThrows(
-        PromiseEngineException.class,
-        () -> customRegionService.updateCustomRegion(createCustomRegionRequest));
+        .thenReturn(List.of(testUtil.getPostalCodeEntity()));
+    CustomRegionResponse customRegionResponse =
+        customRegionService.updateCustomRegion(createCustomRegionRequest);
+    assertEquals(expectedResponse, customRegionResponse);
     verify(customRegionPersistenceService, times(1))
         .fetchRegionByOrgIdAndId(anyString(), anyString());
   }
 
   @Test
-  @DisplayName(
-      "FAILURE PATH:Test the update custom region request with PARTIAL codes and postal code DB with save exception")
-  void updatePostalCodeTest9() throws PromiseEngineException {
-    CustomRegionDomainDto customRegion = testUtil.getCustomRegionEntity();
-    CustomRegionRequest createCustomRegionRequest = testUtil.getCreateCustomRegionRequest2();
-    when(customRegionPersistenceService.fetchRegionByOrgIdAndId(anyString(), anyString()))
-        .thenReturn(Optional.of(customRegion));
-    when(customRegionPersistenceService.saveCustomRegion(any(CustomRegionDomainDto.class)))
-        .thenReturn(customRegion);
-    when(postalCodePersistenceService.fetchPostalCodeList(anyString(), anyString()))
-        .thenReturn(List.of(testUtil.getPostalCodeEntityWithRegions()));
-    when(postalCodePersistenceService.savePostalCode(any()))
-        .thenThrow(PromiseEngineException.class);
-    assertThrows(
-        PromiseEngineException.class,
-        () -> customRegionService.updateCustomRegion(createCustomRegionRequest));
-    verify(customRegionPersistenceService, times(1))
-        .fetchRegionByOrgIdAndId(anyString(), anyString());
-  }
-
-  @Test
-  void updatePostalCodeTest11() throws PromiseEngineException, CommonServiceException {
+  void updatePostalCodeTest11() throws PromiseEngineException {
     CustomRegionDomainDto customRegion = testUtil.getCustomRegionFullEntity();
     CustomRegionRequest createCustomRegionRequest =
         testUtil.getCreateCustomRegionEmptyCodesRequest();
@@ -412,6 +399,72 @@ class CustomRegionServiceTest {
   }
 
   @Test
+  @DisplayName("Happy Path : Delete valid zip_code_prefix from a valid custom region")
+  void deleteCustomRegionTestV2() throws PromiseEngineException, CommonServiceException {
+    DeleteCustomRegionGeozonesRequest deleteRequest =
+        DeleteCustomRegionGeozonesRequest.builder().codes(List.of("X2H")).build();
+    CustomRegionDomainDto customRegion = testUtil.getCustomRegionEntity();
+    List<String> codes = new ArrayList<>();
+    codes.add("X2H");
+    codes.add("T2P");
+    customRegion.setCodes(codes);
+    when(customRegionPersistenceService.fetchRegionByOrgIdAndId(anyString(), anyString()))
+        .thenReturn(Optional.of(customRegion));
+    when(postalCodePersistenceService.fetchPostalCodeList(any(), any()))
+        .thenReturn(List.of(testUtil.getPostalCodeEntity()));
+    CustomRegionResponse customRegionResponse =
+        customRegionService.deleteCustomRegionGeozones(ORG_ID, ID, deleteRequest);
+    assertEquals(customRegion.getOrgId(), customRegionResponse.getOrgId());
+    verify(customRegionPersistenceService, times(0))
+        .deleteCustomRegion(any(CustomRegionDomainDto.class));
+  }
+
+  @Test
+  @DisplayName("Happy Path : Delete valid zip_code_prefix such that custom region will be deleted")
+  void deleteCustomRegionTestV2CompleteCustomRegion()
+      throws PromiseEngineException, CommonServiceException {
+    DeleteCustomRegionGeozonesRequest deleteRequest =
+        testUtil.getDeleteCompleteCustomRegionRequest();
+    CustomRegionDomainDto customRegion = testUtil.getCustomRegionEntity();
+    when(customRegionPersistenceService.fetchRegionByOrgIdAndId(anyString(), anyString()))
+        .thenReturn(Optional.of(customRegion));
+    doNothing()
+        .when(customRegionPersistenceService)
+        .deleteCustomRegion(any(CustomRegionDomainDto.class));
+    when(postalCodePersistenceService.fetchPostalCodeList(any(), any()))
+        .thenReturn(testUtil.getPostalCodeEntityList());
+    CustomRegionResponse customRegionResponse =
+        customRegionService.deleteCustomRegionGeozones(ORG_ID, ID, deleteRequest);
+    assertEquals(customRegion.getOrgId(), customRegionResponse.getOrgId());
+    verify(customRegionPersistenceService, times(1))
+        .deleteCustomRegion(any(CustomRegionDomainDto.class));
+  }
+
+  @Test
+  @DisplayName(
+      "Happy Path : Delete valid zip_code_prefix such that zip_code_prefix provided does not exist")
+  void deleteCustomRegionTestV2InvalidZipCodePrefixes() throws PromiseEngineException {
+    DeleteCustomRegionGeozonesRequest deleteRequest =
+        DeleteCustomRegionGeozonesRequest.builder().codes(List.of("S1P", "S2P")).build();
+    CustomRegionDomainDto customRegion = testUtil.getCustomRegionEntity();
+    when(customRegionPersistenceService.fetchRegionByOrgIdAndId(anyString(), anyString()))
+        .thenReturn(Optional.of(customRegion));
+    doNothing()
+        .when(customRegionPersistenceService)
+        .deleteCustomRegion(any(CustomRegionDomainDto.class));
+    when(postalCodePersistenceService.fetchPostalCodeList(any(), any()))
+        .thenReturn(testUtil.getPostalCodeEntityList1());
+    String message = "Zip code prefixes are not part of custom region";
+    CommonServiceException ex =
+        assertThrows(
+            CommonServiceException.class,
+            () -> customRegionService.deleteCustomRegionGeozones(ORG_ID, ID, deleteRequest));
+    assertEquals(message, ex.getMessage());
+    verify(customRegionPersistenceService, times(0))
+        .deleteCustomRegion(any(CustomRegionDomainDto.class));
+  }
+
+  @Test
   void deletePostalCodeTestWithNonExistingData() {
     when(customRegionPersistenceService.fetchRegionByOrgIdAndId(anyString(), anyString()))
         .thenThrow(RuntimeException.class);
@@ -419,8 +472,7 @@ class CustomRegionServiceTest {
   }
 
   @Test
-  void deletePostalCodeTestWithNonExistingData2()
-      throws PromiseEngineException, CommonServiceException {
+  void deletePostalCodeTestWithNonExistingData2() {
     when(customRegionPersistenceService.fetchRegionByOrgIdAndId(anyString(), anyString()))
         .thenReturn(Optional.empty());
     assertThrows(
@@ -498,5 +550,130 @@ class CustomRegionServiceTest {
         "Invalid sort order, consider giving either ASC or DESC", exception.getMessage());
     verify(customRegionPersistenceService, Mockito.times(0))
         .getCustomRegionListByOrgId(any(), any(), any(), any(), any());
+  }
+
+  @Test
+  @DisplayName("Happy Path : Fetch Custom regions based on country and orgId only")
+  void fetchCustomRegionsByOrgIdAndCountry() throws CommonServiceException, PromiseEngineException {
+    PageParams pageParams =
+        new PageParams(Optional.empty(), Optional.empty(), Optional.empty(), Optional.of("ASC"));
+    when(postalCodePersistenceService.getCustomRegionInfoByOrgIdAndCountry(any(), any(), any()))
+        .thenReturn(testUtil.getCustomRegionProjectionPage());
+    when(customRegionPersistenceService.fetchCustomRegionsByIdsAndOrgId(any(), any()))
+        .thenReturn(testUtil.getCustomRegionEntityList2());
+    Page<CustomRegionInfo> customRegionInfoPage =
+        customRegionService.getCustomRegionByCountryRegionIdAndName(
+            ORG_ID, COUNTRY, null, null, pageParams);
+    assertEquals(ID, customRegionInfoPage.getContent().getFirst().getCustomRegionId());
+    verify(customRegionPersistenceService, times(1)).fetchCustomRegionsByIdsAndOrgId(any(), any());
+    verify(postalCodePersistenceService, times(1))
+        .getCustomRegionInfoByOrgIdAndCountry(any(), any(), any());
+  }
+
+  @Test
+  @DisplayName(
+      "Happy Path : Fetch Custom regions based on country and orgId and custom region ID(s)")
+  void fetchCustomRegionsByOrgIdAndCountryAndRegionIds()
+      throws CommonServiceException, PromiseEngineException {
+    PageParams pageParams =
+        new PageParams(Optional.empty(), Optional.empty(), Optional.empty(), Optional.of("ASC"));
+    when(postalCodePersistenceService.fetchCustomRegionInfoByOrgIdAndRegionId(any(), any(), any()))
+        .thenReturn(testUtil.getCustomRegionProjectionPage());
+    when(customRegionPersistenceService.fetchCustomRegionsByIdsAndOrgId(any(), any()))
+        .thenReturn(testUtil.getCustomRegionEntityList2());
+    Page<CustomRegionInfo> customRegionInfoPage =
+        customRegionService.getCustomRegionByCountryRegionIdAndName(
+            ORG_ID, COUNTRY, "CRID1,CRID2", null, pageParams);
+    assertEquals(ID, customRegionInfoPage.getContent().getFirst().getCustomRegionId());
+    verify(customRegionPersistenceService, times(1)).fetchCustomRegionsByIdsAndOrgId(any(), any());
+    verify(postalCodePersistenceService, times(1))
+        .fetchCustomRegionInfoByOrgIdAndRegionId(any(), any(), any());
+  }
+
+  @Test
+  @DisplayName(
+      "Happy Path : Fetch Custom regions based on country and orgId and custom region name")
+  void fetchCustomRegionsByOrgIdAndCountryAndRegionNames()
+      throws CommonServiceException, PromiseEngineException {
+    PageParams pageParams =
+        new PageParams(Optional.empty(), Optional.empty(), Optional.empty(), Optional.of("ASC"));
+    when(postalCodePersistenceService.fetchCustomRegionInfoByOrgIdAndRegionId(any(), any(), any()))
+        .thenReturn(testUtil.getCustomRegionProjectionPage());
+    when(customRegionPersistenceService.fetchCustomRegionByNamesAndOrgId(any(), any()))
+        .thenReturn(testUtil.getCustomRegionEntityList2());
+    when(customRegionPersistenceService.fetchCustomRegionsByIdsAndOrgId(any(), any()))
+        .thenReturn(testUtil.getCustomRegionEntityList2());
+    Page<CustomRegionInfo> customRegionInfoPage =
+        customRegionService.getCustomRegionByCountryRegionIdAndName(
+            ORG_ID, COUNTRY, null, CUSTOM_REGION_NAME, pageParams);
+    assertEquals(ID, customRegionInfoPage.getContent().getFirst().getCustomRegionId());
+    verify(customRegionPersistenceService, times(1)).fetchCustomRegionByNamesAndOrgId(any(), any());
+    verify(customRegionPersistenceService, times(1)).fetchCustomRegionsByIdsAndOrgId(any(), any());
+    verify(postalCodePersistenceService, times(1))
+        .fetchCustomRegionInfoByOrgIdAndRegionId(any(), any(), any());
+  }
+
+  @Test
+  @DisplayName(
+      "Happy Path : Fetch Custom regions based on country and orgId and custom region name and region Ids")
+  void fetchCustomRegionsByOrgIdAndCountryAndRegionNamesAndIds()
+      throws CommonServiceException, PromiseEngineException {
+    PageParams pageParams =
+        new PageParams(Optional.empty(), Optional.empty(), Optional.empty(), Optional.of("ASC"));
+    when(postalCodePersistenceService.fetchCustomRegionInfoByOrgIdAndRegionId(any(), any(), any()))
+        .thenReturn(testUtil.getCustomRegionProjectionPage());
+    when(customRegionPersistenceService.fetchCustomRegionsByCustomRegionIdsAndNamesAndOrgId(
+            any(), any(), any()))
+        .thenReturn(Optional.ofNullable(testUtil.getCustomRegionEntityList2()));
+    when(customRegionPersistenceService.fetchCustomRegionsByIdsAndOrgId(any(), any()))
+        .thenReturn(testUtil.getCustomRegionEntityList2());
+    Page<CustomRegionInfo> customRegionInfoPage =
+        customRegionService.getCustomRegionByCountryRegionIdAndName(
+            ORG_ID, COUNTRY, "CRID1,CRID2", CUSTOM_REGION_NAME, pageParams);
+    assertEquals(ID, customRegionInfoPage.getContent().getFirst().getCustomRegionId());
+    verify(customRegionPersistenceService, times(1))
+        .fetchCustomRegionsByCustomRegionIdsAndNamesAndOrgId(any(), any(), any());
+    verify(customRegionPersistenceService, times(1)).fetchCustomRegionsByIdsAndOrgId(any(), any());
+    verify(postalCodePersistenceService, times(1))
+        .fetchCustomRegionInfoByOrgIdAndRegionId(any(), any(), any());
+  }
+
+  @Test
+  @DisplayName("Search results not found for the filtered custom region name and id")
+  void emptyPageContentRegionNameAndIdNotFound()
+      throws CommonServiceException, PromiseEngineException {
+    PageParams pageParams =
+        new PageParams(Optional.empty(), Optional.empty(), Optional.empty(), Optional.of("ASC"));
+    when(postalCodePersistenceService.fetchCustomRegionInfoByOrgIdAndRegionId(any(), any(), any()))
+        .thenReturn(Page.empty());
+    when(customRegionPersistenceService.fetchCustomRegionsByCustomRegionIdsAndNamesAndOrgId(
+            any(), any(), any()))
+        .thenReturn(Optional.empty());
+    when(customRegionPersistenceService.fetchCustomRegionsByIdsAndOrgId(any(), any()))
+        .thenReturn(testUtil.getCustomRegionEntityList2());
+    Page<CustomRegionInfo> customRegionInfoPage =
+        customRegionService.getCustomRegionByCountryRegionIdAndName(
+            ORG_ID, COUNTRY, "CRID1,CRID2", CUSTOM_REGION_NAME, pageParams);
+    assertEquals(Page.empty(), customRegionInfoPage);
+    verify(customRegionPersistenceService, times(1))
+        .fetchCustomRegionsByCustomRegionIdsAndNamesAndOrgId(any(), any(), any());
+    verify(customRegionPersistenceService, times(1)).fetchCustomRegionsByIdsAndOrgId(any(), any());
+    verify(postalCodePersistenceService, times(0))
+        .fetchCustomRegionInfoByOrgIdAndRegionId(any(), any(), any());
+  }
+
+  @Test
+  @DisplayName("Exception when an invalid sort order is detected")
+  void invalidSortOrderException() {
+    String orgId = "NEXTUPLE_GR";
+    String country = "US";
+    PageParams pageParams = new PageParams();
+    pageParams.setSortOrder(Optional.of("INVALID_SORT_ORDER"));
+    Assertions.assertThrows(
+        CommonServiceException.class,
+        () -> {
+          customRegionService.getCustomRegionByCountryRegionIdAndName(
+              orgId, country, null, null, pageParams);
+        });
   }
 }
